[workspace]
members = [
    "apps/curator/src-tauri",
    "apps/viewer/src-tauri",
    "crates/dho-client",
    "crates/dho-core",
    "crates/dho-extract",
    "crates/dho-image",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MPL-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
