[package]
name = "dho-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "=0.22.1"
dho-catalog = { path = "../dho-catalog" }
dho-core = { path = "../dho-core" }
dho-extract = { path = "../dho-extract" }
serde = { version = "=1.0.228", features = ["derive"] }

[dev-dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

[lints]
workspace = true
