[package]
name = "dho-extract"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dho-core = { path = "../dho-core" }
dho-image = { path = "../dho-image" }

[dev-dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

[lints]
workspace = true
