[package]
name = "dho-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
dho-client = { path = "../../../crates/dho-client" }
serde = { version = "=1.0.228", features = ["derive"] }
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-dialog = { version = "=2.7.1", default-features = false }

[lints]
workspace = true
